.metadata/.plugins/org.eclipse.cdt.ui/EXTI.build.log
22:18:39 **** Incremental Build of configuration Debug for project EXTI ****
make -j8 all 
arm-none-eabi-gcc "../Src/EXTI_program.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DSTM32 -DSTM32F1 -DSTM32F103C8Tx -DDEBUG -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/EXTI_program.d" -MT"Src/EXTI_program.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/EXTI_program.o"
arm-none-eabi-gcc "../Src/GPIO_program.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DSTM32 -DSTM32F1 -DSTM32F103C8Tx -DDEBUG -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/GPIO_program.d" -MT"Src/GPIO_program.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/GPIO_program.o"
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DSTM32 -DSTM32F1 -DSTM32F103C8Tx -DDEBUG -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/main.o"
In file included from ../Src/EXTI_program.c:10:0:
../Src/EXTI_program.c: In function 'EXTI0_IRQHandler':
../Src/EXTI_program.c:59:16: error: expected identifier or '(' before '->' token
  SET_BIT(EXTI_t-> PR, 0); /* CLEAR interrupt flag */
                ^
../Inc/BIT_MATH.h:11:33: note: in definition of macro 'SET_BIT'
 #define SET_BIT(VAR,BIT)        VAR |=  (1 << (BIT))
                                 ^~~
make: *** [Src/subdir.mk:33: Src/EXTI_program.o] Error 1
make: *** Waiting for unfinished jobs....
In file included from ../Src/main.c:24:0:
../Inc/EXTI_interface.h:40:50: error: unknown type name 'uint8'; did you mean 'int'?
 void EXTI_voidEnableEXTI(EXTI_line_t EXTILine_n, uint8 Copy_u8EXTImode);
                                                  ^~~~~
                                                  int
../Src/main.c: In function 'main':
../Src/main.c:37:2: warning: implicit declaration of function 'EXTI_voidEnableEXTI'; did you mean 'EXTI_voidDisableEXTI'? [-Wimplicit-function-declaration]
  EXTI_voidEnableEXTI(EXTI_LINE0, FALLING_EDGE);
  ^~~~~~~~~~~~~~~~~~~
  EXTI_voidDisableEXTI
make: *** [Src/subdir.mk:39: Src/main.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.

22:18:39 Build Failed. 5 errors, 1 warnings. (took 471ms)

